k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: yaki4/rahti-backend:1.2

          ports:
            - containerPort: 8080
            
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m
