k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: yaki4/rahti-frontend:1.2

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: 50m
            limits:
              cpu: 100m
