k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: mysql
          image: mysql:8.0

          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-data

        - name: mysql-init
          configMap:
            name: mysql-init
