k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db

  ports:
    - port: 3306
      targetPort: 3306

  # type: ClusterIP
